Fix landing page CSS on Safari
For some reason, the feature boxes would be too large when laid out in the
column-then-row layout on Safari. I'm not sure why, so this is just a hacky
workaround.

--- a/src/static/landing.css
+++ b/src/static/landing.css
@@ -151,6 +151,13 @@ main {
   }
 }
 
+@media (min-width: 900px) and (max-width: 1380px) {
+  .feature {
+    /* For Safari 13.0.5 */
+    max-height: 271px;
+  }
+}
+
 .horizontal {
   display: flex;
   justify-content: center;
